--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Passport",
+  "name": "authenticationa-app",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Jose Annunziato",
-  "license": "ISC",
+  "author": "Author Name",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.12.0",
     "cookie-parser": "^1.3.4",
